Changelog:

0.06 - not yet released
 - Added ability to change REST server - 'S'
 - Save the current page to disk - 's'

0.05 - Tue Jun  5 19:24:15 PDT 2007
 - wikrad now works in 80 column terminals
 - Add 'P' - new blog post in current blog
 - fixed bug: no page entered in page clone dialog
 - don't lose page and workspace when cancelling dialogs
 - s/stoss/open/;

0.04 - Fri Apr 27 14:28:31 PDT 2007
 - Added end of include marker
 - Added 'T' to tag the current page
 - Added 'm' to view page meta data.  
   Data::Dumper for presentation, yay!
 - Added 'c' to clone a page
 - Added 'C' to clone a page from a specific template page
 - fixed editing page names with strange characters
 - STOSS workspace has lower priority than your stored server 
   and workspace - thanks Chris Simmons
 - all rester calls set accept header

0.03 - Mon Mar 26 20:44:43 PDT 2007
 - Added wikrad usage

0.02 - Sun Mar 25 16:25:03 PDT 2007
 - remove references to App::Wikrad
 - Add status dialog when fetching forward/back links

0.01 - Thu Mar 22 16:06:30 PDT 2007
 - many many things
 - added a status box when fetching list of workspaces
 - use a listbox for list of pages